hw/module12/2.deployment_svc_httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          imagePullPolicy: Always
          image: zsingsun/httpserver:v1.4
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: config-volume
              mountPath: /app/conf
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 60
            successThreshold: 1
      volumes:
        - name: config-volume
          configMap:
            name: httpserver-config
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - name: http-service2
      port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app: service2
